# haikubot

./: .gitignore  Bot.hs  Config.hs  Connections.hs  Fundamentals.hs  Haiku.hs  Haikubot.hs  Handler.hs  Logging.hs  MPlayer.hs  Main.hs  Mainplus.hs  Plugins.hs  README.md  Tavutus.hs  TavutusTest.hs  Utils.hs  haikubot.cabal  haikubot.rc  haikubot.service  haikubot_local.rc  main.hs
Haikubot/: Actions.hs  CLI.hs  Commands.hs  Connections.hs  Core.hs  Logging.hs  Main.hs  Messages.hs  Settings.hs
Haikubot/Plugins/: Basics.hs  Runot.hs
Internal/: Actions.hs  CLI.hs  Commands.hs  Connections.hs  Listen.hs  Messages.hs  Settings.hs  Types.hs
Plugins/: Haiku.hs  MPlay.hs  Runot.hs
