name:             haikubot
version:          0.0.0
description:      Simple irc bot originally intended to check finnish haiku
                  syllablels
license:          BSD3
license-file:     LICENSE
author:           Samuli Thomasson
maintainer:       samuli.thomasson@paivola.fi
build-Type:       Simple
cabal-version:    >=1.2

source-repository head
   type:       git
   location:   git://ssdesk.paivola.fi/haikubot.git

library
   exposed-modules: Config, Handler, Haiku, Plugins, Plugins.MPlay

executable haikubot
   ghc-options:       -Wall

   main-is:           main.hs

   build-depends:       base        >= 3       && < 5
                      , network     >= 2.3     && < 3
                      , simpleirc   >= 0.2     && < 0.3
                      , mtl         >= 2.0     && < 2.1
                      , stm         >= 2.3     && < 2.4
                      , text
                      , bytestring
