name:             haikubot
version:          0.0.0
description:      Simple irc bot originally intended to check finnish haiku
                  syllablels
license:          BSD3
license-file:     LICENSE
author:           Samuli Thomasson
maintainer:       samuli.thomasson@paivola.fi
build-Type:       Simple
cabal-version:    >=1.2

source-repository head
   type:       git
   location:   git://ssdesk.paivola.fi/haikubot.git

library
   exposed-modules: Bot
                  , Config
                  , Tavutus
                  , Utils
                  , Plugins.Runot

   other-modules: Internal.Actions
                , Internal.CLI
                , Internal.Commands
                , Internal.Connections
                , Internal.Messages
                , Internal.Settings
                , Internal.Types

   extensions: OverloadedStrings

executable haikubot
   ghc-options:       -Wall

   main-is:           main.hs

   extensions: OverloadedStrings

   build-depends:       base        >= 3       && < 5
                      , network     >= 2.4     && < 3
                      , mtl         >= 2.1     && < 2.2
                      , transformers
                      , stm         >= 2.4     && < 2.5
                      , text
                      , bytestring
                      , parsec
                      , directory
                      , random
                      , containers
