name:             haikubot
version:          0.0.0
description:      Simple irc bot originally intended to check finnish haiku
                  syllablels
license:          BSD3
license-file:     LICENSE
author:           Samuli Thomasson
maintainer:       samuli.thomasson@paivola.fi
build-Type:       Simple
cabal-version:    >=1.2

source-repository head
   type:       git
   location:   git://ssdesk.paivola.fi/haikubot.git

library
   exposed-modules: Haikubot
                  , Haikubot.Actions
                  , Haikubot.CLI
                  , Haikubot.Commands
                  , Haikubot.Connections
                  , Haikubot.Core
                  , Haikubot.Logging
                  , Haikubot.Main
                  , Haikubot.Messages
                  , Haikubot.Settings
                  , Haikubot.Plugins.Basics
                  , Haikubot.Plugins.Runot
                  , Tavutus

   extensions: OverloadedStrings

executable haikubot
   ghc-options:       -Wall

   main-is:           main.hs

   extensions: OverloadedStrings

   build-depends:       base        >= 3       && < 5
                      , containers
                      , directory
                      , network     >= 2.4     && < 3
                      , parsec
                      , random
                      , stm         >= 2.4     && < 2.5
                      , text
                      , transformers
                      , mtl
